feat(projects): Update project articles

--- a/pages/projects/jekyll-themes.mdx
+++ b/pages/projects/jekyll-themes.mdx
@@ -14,21 +14,6 @@ import { Figure } from '@madebyconnor/bamboo-ui'
 
 <Figure
   image={{
-    src: '/static/images/projects/autumn.jpg',
-    alt: 'Screenshot of the Autumn Jekyll theme',
-    aspectRatio: 16 / 9
-  }}
-  align={Figure.FULL}
-/>
-
-# Autumn
-
-Autumn is a minimalistic, duo-chromatic Jekyll theme that pairs a prominent headline with two column content.
-
-[Demo](https://connor-baer.github.io/autumn/) · [Fork on GitHub](https://github.com/connor-baer/autumn)
-
-<Figure
-  image={{
     src: '/static/images/projects/spring.jpg',
     alt: 'Screenshot of the Spring Jekyll theme',
     aspectRatio: 16 / 9
@@ -38,7 +23,7 @@ Autumn is a minimalistic, duo-chromatic Jekyll theme that pairs a prominent head
 
 # Spring
 
-Spring is a one-page, two-column Jekyll theme.
+Spring is a one-page, two-column Jekyll theme that's perfect for long form content.
 
 [Demo](https://connor-baer.github.io/spring/) · [Fork on GitHub](https://github.com/connor-baer/spring)
 
@@ -53,9 +38,24 @@ Spring is a one-page, two-column Jekyll theme.
 
 # Summer
 
-Summer is a simple Jekyll theme with a photo sidebar.
+Summer is a simple Jekyll theme with a photo sidebar. It works great for collections of content and comes with search and filtering built-in. I used it to collect my favourite recipes.
 
 [Demo](https://connor-baer.github.io/summer/) · [Fork on GitHub](https://github.com/connor-baer/summer)
+
+<Figure
+  image={{
+    src: '/static/images/projects/autumn.jpg',
+    alt: 'Screenshot of the Autumn Jekyll theme',
+    aspectRatio: 16 / 9
+  }}
+  align={Figure.FULL}
+/>
+
+# Autumn
+
+Autumn is a minimalistic, duo-chromatic Jekyll theme that pairs a prominent headline with two column content. I used it for my main website.
+
+[Demo](https://connor-baer.github.io/autumn/) · [Fork on GitHub](https://github.com/connor-baer/autumn)
 
 <Figure
   image={{
@@ -68,6 +68,6 @@ Summer is a simple Jekyll theme with a photo sidebar.
 
 # Winter
 
-Winter is a minimalist Jekyll theme built for documentation websites.
+Winter is a minimalist Jekyll theme built for documentation websites. Unfortunately, I never quite managed to finish it.
 
 [Demo](https://connor-baer.github.io/winter/) · [Fork on GitHub](https://github.com/connor-baer/winter)
