--- a/pages/projects/uwc-blogs.mdx
+++ b/pages/projects/uwc-blogs.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'UWC Blogs'
-subtitle: 'A collection of 400+ blogs written by UWC students in 28 languages from 77 countries at the 17 United World Colleges.'
+subtitle: 'A collection of 440+ blogs written by UWC students in 28 languages from 77 countries at the 18 United World Colleges.'
 brief: 'I use UWC Blogs as a playground to experiment with new technologies. The latest iteration is built with VueJS and loads in 0.6 seconds or less.'
 image:
   src: '/static/images/projects/uwc-blogs.jpg'
@@ -21,6 +21,6 @@ import { Figure } from '@madebyconnor/bamboo-ui'
   align={Figure.FULL}
 />
 
-When I started [UWC Blogs](https://uwcblogs.com/) in 2013, my intention was to give UWC applicants a glimpse into life at UWC. At the time I was waiting impatiently to start my own UWC experience at [UWC Waterford Kamhlaba](https://uwcblogs.com/#waterford-kamhlaba-uwc). I had soaked up every bit of UWC promotional material, but I still couldn’t quite imagine what UWC would be like. So I read through every blog about UWC I could find and eventually created UWC Blogs to share the blogs with other UWC hopefuls.
+When I started [UWC Blogs](https://uwcblogs.com/) in 2013, my intention was to give UWC applicants a glimpse into life at UWC. At the time I was waiting impatiently to start my own UWC experience at [UWC Waterford Kamhlaba](https://uwcblogs.com/#waterford-kamhlaba-uwc). I had soaked up every bit of UWC promotional material, but I still couldn’t quite imagine what UWC would be like. So I read through every blog about UWC I could find and eventually created UWC Blogs to share my list of blogs with other UWC hopefuls.
 
-Now UWC Blogs has grown to include over 400 blogs. That’s a lot of content!
+Now UWC Blogs has grown to include over 440 blogs. That’s a lot of content!
