--- a/pages/travel/guides/berlin.mdx
+++ b/pages/travel/guides/berlin.mdx
@@ -7,11 +7,21 @@ image:
 layout: 'guide'
 ---
 
+import { Paragraph } from '@madebyconnor/bamboo-ui'
+
+import Aside from '../../../components/travel/Aside'
+
 Bacon ipsum dolor amet beef ham hock pig cow tail meatloaf. Shoulder sausage porchetta landjaeger. Ground round kevin tongue venison brisket burgdoggen pork belly landjaeger. Chuck jerky frankfurter kevin, beef ribs meatball leberkas pork chop tenderloin beef.
 
 Flank tail chuck meatloaf turducken. Meatball kielbasa shoulder, biltong pig tenderloin prosciutto. Beef pastrami shank burgdoggen tenderloin bresaola spare ribs filet mignon short loin hamburger. Venison pork loin prosciutto salami. Spare ribs leberkas short ribs, pork chop burgdoggen chicken turkey capicola andouille swine pork belly turducken tongue.
 
-Ground round hamburger jowl ham hock pancetta andouille prosciutto boudin chicken meatloaf pork chop. Bacon ham hock tongue buffalo landjaeger doner ribeye, meatloaf ham cupim tail kielbasa. Andouille shankle alcatra, jowl ball tip burgdoggen pig pork hamburger brisket short loin prosciutto porchetta salami. Pork belly bacon kevin venison, chicken rump cupim swine pastrami. Jowl leberkas turkey salami, capicola doner kielbasa. Capicola sausage meatloaf drumstick.
+<Aside>
+  <Paragraph size="kilo">
+    Ground round hamburger jowl ham hock pancetta andouille prosciutto boudin
+    chicken meatloaf pork chop. Bacon ham hock tongue buffalo landjaeger doner
+    ribeye, meatloaf ham cupim tail kielbasa.
+  </Paragraph>
+</Aside>
 
 Ground round pork loin ball tip, doner porchetta andouille filet mignon jowl shank drumstick tri-tip burgdoggen. Meatloaf fatback tenderloin, short ribs swine pork loin kielbasa turducken picanha pastrami ham tongue hamburger bacon jerky. Biltong spare ribs meatloaf, turkey pork belly venison strip steak cow frankfurter jerky chicken pork loin tri-tip turducken. Kevin biltong tail beef ribs. Sausage ball tip rump shank t-bone porchetta. Salami leberkas alcatra, doner sausage pig cupim chicken.
 
