--- a/pages/travel/guides/berlin.mdx
+++ b/pages/travel/guides/berlin.mdx
@@ -3,8 +3,13 @@ title: 'Berlin'
 subtitle: 'is exciting nights.'
 date: '2019/4/6'
 image:
-  src: '/static/images/guides/berlin/cathedral.jpg'
-  alt: ''
+  src: '/static/images/guides/berlin/brandenburg-gate.jpg'
+  alt: 'Brandenburg Gate, Germany'
+  color: '#97c3ca'
+map:
+  name: 'Berlin'
+  lat: 52.52
+  lon: 13.4
 layout: 'guide'
 ---
 
@@ -14,11 +19,11 @@ import Aside from '../../../components/travel/Aside'
 
 Bacon ipsum dolor amet beef ham hock pig cow tail meatloaf. Shoulder sausage porchetta landjaeger. Ground round kevin tongue venison brisket burgdoggen pork belly landjaeger. Chuck jerky frankfurter kevin, beef ribs meatball leberkas pork chop tenderloin beef.
 
-# 🥘 Rio de Janeiro Welcomes You
+# 🥘 Berlin Welcomes You
 
 Flank tail chuck meatloaf turducken. Meatball kielbasa shoulder, biltong pig tenderloin prosciutto. Beef pastrami shank burgdoggen tenderloin bresaola spare ribs filet mignon short loin hamburger. Venison pork loin prosciutto salami. Spare ribs leberkas short ribs, pork chop burgdoggen chicken turkey capicola andouille swine pork belly turducken tongue.
 
-## 😄 First Things First – Breakfast of
+## 😄 First Things First – Breakfast
 
 <Aside>
   <Paragraph size="kilo">
@@ -30,6 +35,6 @@ Flank tail chuck meatloaf turducken. Meatball kielbasa shoulder, biltong pig ten
 
 Ground round pork loin ball tip, doner porchetta andouille filet mignon jowl shank drumstick tri-tip burgdoggen. Meatloaf fatback tenderloin, short ribs swine pork loin kielbasa turducken picanha pastrami ham tongue hamburger bacon jerky. Biltong spare ribs meatloaf, turkey pork belly venison strip steak cow frankfurter jerky chicken pork loin tri-tip turducken. Kevin biltong tail beef ribs. Sausage ball tip rump shank t-bone porchetta. Salami leberkas alcatra, doner sausage pig cupim chicken.
 
-# What's up
+# Night life
 
 Shank short ribs meatloaf, ham ground round burgdoggen pig brisket picanha. Drumstick pork loin jowl doner chicken meatloaf pork chop shoulder tenderloin kevin fatback burgdoggen frankfurter ball tip chuck. Tongue ground round porchetta, andouille picanha shankle chicken strip steak. Cow beef ribs short loin pork loin, cupim ball tip doner frankfurter leberkas boudin alcatra shankle chicken sausage flank.
