feat: Enable preview mode

--- a/pages/blog/africa-is-not-a-country.mdx
+++ b/pages/blog/africa-is-not-a-country.mdx
@@ -4,6 +4,7 @@ description: 'Guess what, it’s a continent. It consists of 55 individual count
 image:
   src: '/static/images/blog/zebra.jpg'
   alt: 'A zebra stands on dry grass and looks straight into the camera.'
+  color: '#804f26'
 date: '2015/3/27'
 category: 'Opinion'
 archived: true
