--- a/pages/blog/nobody-has-the-intention-of-building-an-airport.mdx
+++ b/pages/blog/nobody-has-the-intention-of-building-an-airport.mdx
@@ -4,6 +4,7 @@ description: 'These were the words that passed through my mind as I got on the i
 image:
   src: '/static/images/blog/nobody-building-airport.jpg'
   alt: 'An artistic rendering of the welcome hall of the new BER airport.'
+  color: '#cad8da'
 date: '2013/9/15'
 category: 'Journal'
 archived: true
