--- a/pages/blog/this-is-the-europe-i-am-proud-of.mdx
+++ b/pages/blog/this-is-the-europe-i-am-proud-of.mdx
@@ -4,6 +4,7 @@ description: 'I am in tears. Finally (!) Austria and Germany show some compassio
 image:
   src: '/static/images/blog/map-tattoo.jpg'
   alt: 'A stretched out arm shows a tattoo of the map of the world.'
+  color: '#e0e1e2'
 date: '2015/9/5'
 category: 'Opinion'
 featured: true
