--- a/pages/projects/gutshaus-langensee.mdx
+++ b/pages/projects/gutshaus-langensee.mdx
@@ -5,6 +5,7 @@ brief: 'Within three weeks I restructured the website, rebuilt it on top of Squa
 image:
   src: '/static/images/projects/gutshaus-langensee.jpg'
   alt: 'Screenshot of gutshaus-langensee.de'
+  color: '#bee9cd'
 link: 'https://gutshaus-langensee.de'
 client: 'Gutshaus Langensee'
 skills: ['Concept', 'Design']
