--- a/pages/projects/jekyll-themes.mdx
+++ b/pages/projects/jekyll-themes.mdx
@@ -5,6 +5,7 @@ brief: 'Jekyll is a simple static site generator. I designed and built these Jek
 image:
   src: '/static/images/projects/jekyll-themes.jpg'
   alt: 'Screenshot of the Change Jekyll theme'
+  color: '#fdcbcc'
 client: 'Side Project'
 skills: ['Design', 'Development']
 layout: 'project'
