--- a/pages/projects/uwc-blogs.mdx
+++ b/pages/projects/uwc-blogs.mdx
@@ -5,6 +5,7 @@ brief: 'I use UWC Blogs as a playground to experiment with new technologies. The
 image:
   src: '/static/images/projects/uwc-blogs.jpg'
   alt: 'Screenshot of uwcblogs.com'
+  color: '#f2f3f5'
 client: 'Side Project'
 skills: ['Design', 'Development']
 layout: 'project'
