--- a/pages/projects/uwc-deutschland.mdx
+++ b/pages/projects/uwc-deutschland.mdx
@@ -5,6 +5,7 @@ brief: 'UWC Germany selects students to study at one of the 17 United World Coll
 image:
   src: '/static/images/projects/uwc-deutschland.jpg'
   alt: 'Screenshot of uwc.de'
+  color: '#bce4e6'
 link: 'https://uwc.de'
 client: 'Deutsche Stiftung UWC'
 skills: ['Concept', 'Design', 'Development']
