--- a/pages/travel/guides/sao-paulo.mdx
+++ b/pages/travel/guides/sao-paulo.mdx
@@ -3,8 +3,10 @@ title: 'São Paulo'
 subtitle: 'Bacon ipsum dolor amet beef ham hock pig cow tail meatloaf. Shoulder sausage porchetta landjaeger. Ground round kevin tongue venison brisket burgdoggen pork belly landjaeger. Chuck jerky frankfurter kevin, beef ribs meatball leberkas pork chop tenderloin beef.'
 image:
   src: '/static/images/guides/sao-paulo/tall-buildings.jpg'
-  alt: ''
+  alt: 'Skyscrapers in colonial architectural style reach for the sky surrounded by palm trees'
+  color: '#64412e'
 layout: 'guide'
+isDraft: true
 ---
 
 Bacon ipsum dolor amet beef ham hock pig cow tail meatloaf. Shoulder sausage porchetta landjaeger. Ground round kevin tongue venison brisket burgdoggen pork belly landjaeger. Chuck jerky frankfurter kevin, beef ribs meatball leberkas pork chop tenderloin beef.
