--- a/pages/blog/sound-of-silence.mdx
+++ b/pages/blog/sound-of-silence.mdx
@@ -4,6 +4,7 @@ description: 'Dear friends, it’s been ages. I’ve meant to write to you for a
 image:
   src: '/static/images/blog/waves.jpg'
   alt: 'Waves disturb a dark body of water.'
+  color: '#1e2126'
 date: '2017/4/6'
 category: 'Journal'
 layout: 'post'
