--- a/pages/travel/guides/cape-town.mdx
+++ b/pages/travel/guides/cape-town.mdx
@@ -3,8 +3,10 @@ title: 'Cape Town'
 subtitle: 'Bacon ipsum dolor amet beef ham hock pig.'
 image:
   src: '/static/images/guides/cape-town/lions-head.jpg'
-  alt: ''
+  alt: "Below Lion's Head blue ocean waves hit the rocky coastal line around Cape Town."
+  color: '#183744'
 layout: 'guide'
+isDraft: true
 ---
 
 Bacon ipsum dolor amet beef ham hock pig cow tail meatloaf. Shoulder sausage porchetta landjaeger. Ground round kevin tongue venison brisket burgdoggen pork belly landjaeger. Chuck jerky frankfurter kevin, beef ribs meatball leberkas pork chop tenderloin beef.
