feat(images): Add more colors

--- a/pages/about.mdx
+++ b/pages/about.mdx
@@ -10,7 +10,8 @@ import { Figure } from '@madebyconnor/bamboo-ui'
   image={{
     src: '/static/images/pages/connor.jpg',
     alt: 'Connor flashes a big smile at the camera.',
-    aspectRatio: 1.618
+    aspectRatio: 1.618,
+    color: '#b6a6b4'
   }}
   align={Figure.FULL}
 />
