perf(images): Prefer png when possible

--- a/pages/projects/uwc-deutschland.mdx
+++ b/pages/projects/uwc-deutschland.mdx
@@ -76,17 +76,17 @@ I spent the whole of May in [Sketch](https://www.sketch.com/) drafting the desig
 <Gallery
   images={[
     {
-      src: '/static/images/projects/homepage-1.png',
+      src: '/static/images/projects/homepage-1.jpg',
       alt:
         'Initial mockup of uwc.de with a large, centered headline on a background image and content boxes below.'
     },
     {
-      src: '/static/images/projects/homepage-2.png',
+      src: '/static/images/projects/homepage-2.jpg',
       alt:
         'Second mockup of uwc.de. The headline is joined by a smaller subheadline, the content boxes are layed out using the golden ratio'
     },
     {
-      src: '/static/images/projects/homepage-3.png',
+      src: '/static/images/projects/homepage-3.jpg',
       alt:
         'Third mockup of uwc.de. The headline and subheadline have a white background for better legibility, and the logo in the navigation bar is larger'
     },
