feat(about): update my location

--- a/pages/about.mdx
+++ b/pages/about.mdx
@@ -16,7 +16,7 @@ import { Figure } from '@madebyconnor/bamboo-ui'
   align={Figure.FULL}
 />
 
-Hi, my name is Connor. I am web developer with a strong background in design, born in Germany and currently living in Berlin.
+Hi, my name is Connor. I am web developer with a strong background in design, born in Germany and currently living in São Paulo, Brazil.
 
 My roots lie in the field of design, however I ultimately found my passion in programming. I was tired of having ideas and not being able to execute them myself. I had that creative itch that I couldn’t quite scratch. So after school I taught myself coding.
 
