refactor: rename remaining theme values

--- a/pages/travel/city/berlin.mdx
+++ b/pages/travel/city/berlin.mdx
@@ -27,7 +27,7 @@ Flank tail chuck meatloaf turducken. Meatball kielbasa shoulder, biltong pig ten
 ## 😄 First Things First – Breakfast
 
 <Aside>
-  <Paragraph size="kilo">
+  <Paragraph size="m">
     Ground round hamburger jowl ham hock pancetta andouille prosciutto boudin
     chicken meatloaf pork chop. Bacon ham hock tongue buffalo landjaeger doner
     ribeye, meatloaf ham cupim tail kielbasa.
