--- a/pages/projects/jekyll-themes.mdx
+++ b/pages/projects/jekyll-themes.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Jekyll Themes'
-subtitle: 'A collection of customisable, easy-to-use Jekyll themes.'
-brief: 'Jekyll is a simple static site generator. I designed and built these Jekyll themes when I still hosted my personal websites on GitHub Pages. They are optimised for speed and ease of use.'
+subtitle: 'A collection of customizable, easy-to-use Jekyll themes.'
+brief: 'Jekyll is a simple static site generator. I designed and built these Jekyll themes when I still hosted my personal websites on GitHub Pages. They are optimized for speed and ease of use.'
 image:
   src: '/static/images/projects/jekyll-themes.jpg'
   alt: 'Screenshot of the Change Jekyll theme'
@@ -17,14 +17,14 @@ import { Figure } from '@madebyconnor/bamboo-ui'
   image={{
     src: '/static/images/projects/spring.jpg',
     alt: 'Screenshot of the Spring Jekyll theme',
-    aspectRatio: 16 / 9
+    aspectRatio: 16 / 9,
   }}
   align={Figure.FULL}
 />
 
 # Spring
 
-Spring is a one-page, two-column Jekyll theme that's perfect for long form content.
+Spring is a one-page, two-column Jekyll theme that's perfect for long-form content.
 
 [Demo](https://connor-baer.github.io/spring/) · [Fork on GitHub](https://github.com/connor-baer/spring)
 
@@ -32,14 +32,14 @@ Spring is a one-page, two-column Jekyll theme that's perfect for long form conte
   image={{
     src: '/static/images/projects/summer.jpg',
     alt: 'Screenshot of the Summer Jekyll theme',
-    aspectRatio: 16 / 9
+    aspectRatio: 16 / 9,
   }}
   align={Figure.FULL}
 />
 
 # Summer
 
-Summer is a simple Jekyll theme with a photo sidebar. It works great for collections of content and comes with search and filtering built-in. I used it to collect my favourite recipes.
+Summer is a simple Jekyll theme with a photo sidebar. It works great for collections of content and comes with search and filtering built-in. I used it to collect my favorite recipes.
 
 [Demo](https://connor-baer.github.io/summer/) · [Fork on GitHub](https://github.com/connor-baer/summer)
 
@@ -47,14 +47,14 @@ Summer is a simple Jekyll theme with a photo sidebar. It works great for collect
   image={{
     src: '/static/images/projects/autumn.jpg',
     alt: 'Screenshot of the Autumn Jekyll theme',
-    aspectRatio: 16 / 9
+    aspectRatio: 16 / 9,
   }}
   align={Figure.FULL}
 />
 
 # Autumn
 
-Autumn is a minimalistic, duo-chromatic Jekyll theme that pairs a prominent headline with two column content. I used it for my main website.
+Autumn is a minimalistic, duo-chromatic Jekyll theme that pairs a prominent headline with two-column content. I used it for my main website.
 
 [Demo](https://connor-baer.github.io/autumn/) · [Fork on GitHub](https://github.com/connor-baer/autumn)
 
@@ -62,7 +62,7 @@ Autumn is a minimalistic, duo-chromatic Jekyll theme that pairs a prominent head
   image={{
     src: '/static/images/projects/docs.jpg',
     alt: 'Screenshot of the Docs Jekyll theme',
-    aspectRatio: 16 / 9
+    aspectRatio: 16 / 9,
   }}
   align={Figure.FULL}
 />
