--- a/pages/travel/city/berlin.mdx
+++ b/pages/travel/city/berlin.mdx
@@ -1,6 +1,7 @@
 ---
 title: 'Berlin'
 subtitle: 'is exciting nights.'
+description: 'Bacon ipsum dolor amet beef ham hock pig cow tail meatloaf. Shoulder sausage porchetta landjaeger. Ground round kevin tongue venison brisket burgdoggen pork belly landjaeger. Chuck jerky frankfurter kevin, beef ribs meatball leberkas pork chop tenderloin beef.'
 date: '2019/4/6'
 image:
   src: '/static/images/guides/berlin/brandenburg-gate.jpg'
