Eagerly load hero images

--- a/pages/about.mdx
+++ b/pages/about.mdx
@@ -12,6 +12,7 @@ import { Figure } from '@madebyconnor/bamboo-ui'
     alt: 'Connor smiles into the camera',
     aspectRatio: 1.618,
     color: '#cfced2',
+    loading: 'eager',
   }}
   align={Figure.FULL}
 />
